--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,5 +66,6 @@
     "explorer.fileNesting.patterns": {
         "*.sln": "*.csproj",
     },
-    "dotnet.defaultSolution": "Endlless-Dungeons.sln"
+    "dotnet.defaultSolution": "Endlless-Dungeons.sln",
+    "dotnet.preferCSharpExtension": true
 }
